--- a/index.html
+++ b/index.html
@@ -1,12 +1,9 @@
-
 <!DOCTYPE html>
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
   </head>
   <body>
-    <script>
-      alert('Hello World');
-    </script>
+    <script src="app.js"></script>
   </body>
 </html>
